# http-serve

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.githooks/: pre-commit
.github/workflows/: container.yml  rust.yml
src/: main.rs
