[package]
name = "httpserve"
version = "0.1.8"
edition = "2024"
authors = ["The_Fireplace <git@the-fireplace.dev>"]
license = "Apache-2.0 OR MIT"

[dependencies]
actix-web = { version = "4.13.0", default-features = false, features = ["macros"] }
actix-files = "0.6.10"

[profile.release]
lto = true
codegen-units = 1
strip = true